sf-hrms/force-app/main/default/objects/Separation__c/Separation__c.object-meta.xml
<CustomObject>
    <label>Separation</label>
    <nameField>
        <label>Separation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Separations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>