sf-hrms/force-app/main/default/objects/Separation__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Separations</relationshipLabel><relationshipName>Separations</relationshipName></CustomField>