sf-hrms/force-app/main/default/objects/Separation__c/fields/Exit_Interview_Done__c.field-meta.xml
<CustomField><fullName>Exit_Interview_Done__c</fullName><label>Exit Interview Done</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>