sf-hrms/force-app/main/default/objects/Separation__c/fields/FnF_Amount__c.field-meta.xml
<CustomField><fullName>FnF_Amount__c</fullName><label>F&amp;F Amount</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>