sf-hrms/force-app/main/default/objects/Separation__c/fields/Notice_Date__c.field-meta.xml
<CustomField><fullName>Notice_Date__c</fullName><label>Notice Date</label><type>Date</type></CustomField>