sf-hrms/force-app/main/default/objects/Separation__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Initiated</fullName><default>true</default></value><value><fullName>Notice Period</fullName><default>false</default></value><value><fullName>Clearance Pending</fullName><default>false</default></value><value><fullName>Completed</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>