sf-hrms/force-app/main/default/objects/Separation__c/fields/Type__c.field-meta.xml
<CustomField><fullName>Type__c</fullName><label>Separation Type</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Resignation</fullName><default>false</default></value><value><fullName>Termination</fullName><default>false</default></value><value><fullName>Retirement</fullName><default>false</default></value><value><fullName>Contract End</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>